# suprapuzzle

./: Menu.vala  Puzzle.vala  README.md  Tiles.vala  TimerClock.vala  gresource.xml  info.in  install.sh  main.vala  meson.build  meson_options.txt
data/: style.css
src/: GnomeExtension.vala  Menu.vala  Particle.vala  Puzzle.vala  Tile.vala  Tiles.vala  TimerClock.vala  config.vala.in  main.vala  meson.build
